# movie-reviews-sentiment-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
notebook/: data_extraction.ipynb  distilbert.ipynb  kaggle_glove.ipynb  lstm_training.ipynb  lstm_training_glove.ipynb  training.ipynb
notebooks/: generate_data.ipynb  inference.ipynb  ml_eval.ipynb  ml_training.ipynb  predict.ipynb  transformers.ipynb
src/: config.py  eval_utils.py  load_data.py  ml_utils.py  model_utils.py  train_utils.py
src/scripts/: download_test_data.py  evaluate.py  train.py
