[project]
name = "movies-reviews-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "protobuf>=7.34.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "tqdm>=4.67.2",
    "transformers>=5.0.0",
]
